k8s-spring/gateway/gateway-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: k8s-spring-gateway
spec:
  selector:
    app:  k8s-spring-gateway
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    targetPort:  8080
