k8s-spring/gateway/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-spring-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: zbt-test
spec:
  rules:
  - host: spring.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: k8s-spring-gateway
          servicePort: 8080
